--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,23 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/openFlutter"
+        android:id="@+id/openFullScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Ir para tela pix"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Flutter full Screen"
+        app:layout_constraintBottom_toTopOf="@id/openBottomSheet"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/openBottomSheet"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Flutter Bottom Sheet"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/openFullScreen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
